examples/valid/set_cookie.reqlang
```%config
[[prompts]]
name = "key"

[[prompts]]
name = "value"
```

```%request
GET https://httpbin.org/cookies/set/{{?key}}/{{?value}} HTTP/1.1
```
